[gd_scene load_steps=2 format=2]

[ext_resource path="res://dataCode/PowerUpsSpawner.gd" type="Script" id=1]

[node name="PowerUpsSpawner" type="Node"]
script = ExtResource( 1 )

[node name="AttackSpeedTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MoreAttackTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
